# llm-perf-tools

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: unittest.yml
docs/: README.md  conf.py  index.rst
eval_results/: ollama_batch_example_complete.json  ollama_single_example_metrics.json  sglang_batch_metrics.json
examples/: gpu-monitor-demo.py  ollama-batch-request-example.py  ollama-single-request-example.py  ollama-tracker-batch-example.py  ollama-tracker-single-example.py  sglang-batch-request-example.py  sglang-signle-request-example.py  visualization-example.py
examples/eval_results/: sglang_gpu_metrics.csv
src/llm_perf_tools/: __init__.py  inference.py  metrics.py  models.py  types.py  utils.py  visualization.py
tests/: test_inference_tracker.py
tests/e2e/: test_tokenizer_e2e.py
