[tool.poetry]
name = "llm-perf-tools"
version = "0.1.0"
description = "Tool for monitoring LLM inference metrics"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "llm_perf_tools", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
openai = ">=1.107.0"
pydantic = ">=2.11.7"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.0"
pytest-asyncio = "^1.1.0"
ruff = "^0.12.12"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
